--- a/react/package.json
+++ b/react/package.json
@@ -2,6 +2,7 @@
   "name": "react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "./",
   "type": "module",
   "scripts": {
     "dev": "vite",
